# docAI

./: .gitignore  README.md  SETUP.md  docAI.code-workspace  environment.yml
libs/file_name_check/: pyproject.toml
libs/file_name_check/src/file_name_check/: parse_name.py
libs/pipeline_context/: pyproject.toml
libs/pipeline_context/src/pipeline_context/: context.py
services/excel_preprocess/: pyproject.toml
services/excel_preprocess/src/excel_preprocess/: main.py
services/excel_preprocess/tests/data/format1/: Quotation_Q2502BCN02373_CHROBI_538.xlsx
