[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-context"
version = "0.1.0"
description = "Shared ProcessingContext and logging helpers for the LLM pipeline"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]