[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-preprocess"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["file-name-check"]   # <— depends on your library

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
excel-preprocess = "excel_preprocess.main:main"